--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.10.1",
     "aos": "^3.0.0-beta.6",
     "next": "14.0.1",
     "react": "^18",
